@@ -114,6 +114,8 @@
                 <div class="clearer"></div>
             </div>
 
+            <div class="error"></div>
+
             <div class="info">
                 <img class="avatar" />
                 <p class="props">
