@@ -1,4 +1,5 @@
 0.47: (in development)
+    + User not found message in profile
     * Unique suggest boxes for each account
 
 0.46:
